--- a/Kadai/index.html
+++ b/Kadai/index.html
@@ -17,7 +17,7 @@
     <div id="app" class="row">
         <div id="number_area" class="col-md-4">
             <!-- 見出しh5で「現在の数：0」を表示する　※0は初期値、計算後は計算結果の値 -->
-            <h5>現在の数:{{count}}</h5>
+            <h5>現在の数:<p>{{count}}</p></h5>
             計算用の数<input type="number" v-model.number="inNumber" class="form-control">
         </div>
         <div id="btn_area" >
